--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,33 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h1 {
+  margin-top: 8%;
+  color: #ff3333;
+  font-weight: bold;
+}
+
+h2 {
+  color: #ff4d4d;
+}
+
+.delete-edit {
+  margin-top: 10px;
+}
+
+.comments-title {
+  font-weight: bold;
+  margin-top: 30px;
+}
+
+.post-title-link {
+  color: #ff4d4d;
+  padding: 5px;
+  border-radius: 2%;
+  &:hover{
+    text-decoration: none;
+    color: #ff4d4d;
+    background-color: #ffcccc;
+  }
+}
