--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 h1 {
-  margin-top: 8%;
+  margin-top: 4%;
   color: #ff3333;
   font-weight: bold;
 }
@@ -12,13 +12,17 @@ h2 {
   color: #ff4d4d;
 }
 
+.post-title-show{
+  text-align: center;
+}
+
 .delete-edit {
   margin-top: 10px;
 }
 
 .comments-title {
   font-weight: bold;
-  margin-top: 30px;
+  margin-top: 60px;
 }
 
 .post-title-link {
@@ -30,4 +34,17 @@ h2 {
     color: #ff4d4d;
     background-color: #ffcccc;
   }
+}
+
+.body {
+  font-size: 20px;
+  border: 10px solid #ff4d4d;
+  border-radius: 10%;
+  margin-top: 20px;
+  padding: 35px;
+}
+
+.btn {
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
