Adds links to sign in and sign up

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,8 @@
   </head>
 
   <body>
+    <%= link_to "Sign up", new_user_registration_path, class: "btn btn-outline-danger" %>
+    <%= link_to "Log in", new_user_session_path, class: "btn btn-outline-danger" %>
     <%= yield %>
   </body>
 </html>
