--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,9 +3,11 @@
   <div class="row">
     <div class="col-10 offset-1">
       <h1>Posts</h1>
-      <div class="text-right">
-        <%= link_to "Create post", new_post_path, class: "btn btn-outline-danger" %>
-      </div>
+      <% if signed_in? %>
+        <div class="text-right">
+          <%= link_to "Create post", new_post_path, class: "btn btn-outline-danger" %>
+        </div>
+      <% end %>
       <hr>
       <% @posts.each do |post| %>
         <div class="post-container">
@@ -18,8 +20,10 @@
           <div class="post-intro">
             <%= post.body %>
             <div class="delete-edit">
-              <span><%= link_to "Edit &#9998;".html_safe, edit_post_path(post) %></span>
-              <span><%= link_to "Delete &#128465;".html_safe, post, method: :delete, data: { confirm: "Are you sure to delete this post?" } %></span>
+              <% if signed_in? %>
+                <span><%= link_to "Edit &#9998;".html_safe, edit_post_path(post) %></span>
+                <span><%= link_to "Delete &#128465;".html_safe, post, method: :delete, data: { confirm: "Are you sure to delete this post?" } %></span>
+              <% end %>
             </div>
           </div>
         </div>
