--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,47 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-10 offset-1">
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+      <h2>Sign up</h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+
+        <% if devise_error_messages! != "" %>
+          <div class="alert alert-danger text-center">
+            <%= devise_error_messages! %>
+          </div>
+        <% end %>
+
+        <div class="field form-group">
+          <%= f.label :name %>
+          <%= f.text_field :name, placeholder: "Name", autofocus: true, autocomplete: "name", class: "form-control input-lg" %>
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :email %>
+          <%= f.email_field :email, placeholder: "Email", autofocus: true, autocomplete: "email", class: "form-control input-lg" %>
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :password %>
+          <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %>
+          <%= f.password_field :password, placeholder: "Password", autocomplete: "new-password", class: "form-control input-lg" %>
+        </div>
+
+        <div class="field form-group">
+          <%= f.label :password_confirmation %>
+          <%= f.password_field :password_confirmation, placeholder: "Password confirmation", autocomplete: "new-password", class: "form-control input-lg" %>
+        </div>
+
+        <div class="actions">
+          <%= f.submit "Sign up", class: "btn btn-danger btn-lg btn-block" %>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
