--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,10 +36,10 @@
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Sign up", new_user_registration_path, class: "btn btn-outline-danger" %>
+                <%= link_to "Sign up", new_user_registration_path, class: "navbar-btn btn btn-outline-danger" %>
               </li>
               <li class="nav-item">
-                <%= link_to "Log in", new_user_session_path, class: "btn btn-outline-danger" %>
+                <%= link_to "Log in", new_user_session_path, class: "navbar-btn btn btn-outline-danger" %>
               </li>
             <% end %>
           </ul>
