--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,12 @@
           <ul class="navbar-nav ml-auto">
             <% if signed_in? %>
               <li class="nav-item">
-                <div class="btn btn-outline-danger end-btns" id="greeting-btn" >
+                <div class="navbar-btn btn btn-outline-danger end-btns" id="greeting-btn" >
                   Hello, <%= current_user.name %>
                 </div>
               </li>
               <li class="nav-item">
-                <%= link_to "Logout",  destroy_user_session_path, class: "btn btn-outline-danger", method: :delete %>
+                <%= link_to "Logout",  destroy_user_session_path, class: "navbar-btn btn btn-outline-danger", method: :delete %>
               </li>
             <% else %>
               <li class="nav-item">
