--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,12 @@
       </div>
     </nav>
 
+    <% if flash[:notice] %>
+      <div class="alert alert-warning">
+        <%= flash[:notice] %>
+      </div>
+    <% end %>
+
     <%= yield %>
 
   </body>
