--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
       </div>
       <h1 class="post-title-show"><%= @post.title %></h1>
       <div class="text-center">
-        <small>By: PABLO, on: <%= @post.created_at%></small>
+        <small>By: PABLO, <%= time_ago_in_words(@post.created_at)%> ago</small>
       </div>
       <% if signed_in? && current_user == @post.user%>
       <div class="delete-edit text-center">
